# videoproducer-api

./: .env.example  Dockerfile  LICENSE  README.md  app.conf  docker-compose.yml  main.py  pyproject.toml
api/v1/: __init__.py  admin.py  countries.py  flights.py  health.py  leaderboards.py  pilots.py  tokens.py  uploads.py  users.py
app/controllers/: __init__.py  flight.py  pilot.py  user.py
app/models/: __init__.py  flight.py  pilot.py  role.py  user.py
app/repositories/: __init__.py  flights.py  pilots.py  users.py
app/schemas/extras/: __init__.py  health.py
app/schemas/requests/: __init__.py  flights.py  users.py
app/schemas/responses/: __init__.py  base.py  countries.py  flights.py  leaderboards.py  pilots.py  users.py
app/tasks/: flights.py  uploads.py
cli/: __init__.py  database.py  fake.py  shell.py
core/: celery_app.py  config.py  server.py
core/controller/: __init__.py  base.py
core/database/: __init__.py  migration.py  session.py
core/database/mixins/: __init__.py
core/exceptions/: __init__.py  base.py
core/factory/: __init__.py  factory.py
core/fastapi/: exception_handlers.py
core/fastapi/dependencies/: __init__.py  authentication.py
core/repository/: __init__.py  base.py
core/security/: __init__.py  jwt_handler.py  password_handler.py  require_role.py
core/storage/: s3.py
tests/: conftest.py  test_config.py  test_exception_handlers.py  test_migration.py
tests/api/: conftest.py  test_flights_router.py
tests/controllers/: test_flight_controller.py  test_user_controller.py
tests/factory/: users.py
(+9 files in other folders)
